[package]
name = "movie_monsters"
version = "0.1.0"
authors = ["Phil Howlett <phil.g.howlett@gmail.com>"]
edition = "2018"
description = "A game set in the early days of grand disaster movies - where you play the monster."
license = "MIT"
keywords = ["game"]
categories = ["games"]
publish = false

[dependencies]
