[package]
name = "movie_monsters"
version = "0.1.0"
authors = ["Phil Howlett <phil.g.howlett@gmail.com>"]
edition = "2018"
description = "A game set in the early days of grand disaster movies - where you play the monster."
license = "MIT"
keywords = ["game"]
categories = ["games"]
publish = false

[profile.release]
lto = "thin"

[dependencies]
bracket-lib = "0.8.1"
legion = "0.4.0"
ron = "0.6.4"
serde = "1.0.125"
